// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils validateAndParseFilters tests Verify validateAndParseFilters for erroneous data throws exception 1`] = `
Array [
  "Invalid parameter: account.id",
  "Invalid parameter: timestamp",
  "Invalid parameter: order",
  "Invalid parameter: limit",
  "Invalid parameter: sequencenumber",
  "Invalid parameter: account.publickey",
  "Invalid parameter: result",
  "Invalid parameter: type",
  "Invalid parameter: account.balance",
  "Invalid parameter: encoding",
]
`;

exports[`utils validateAndParseFilters tests Verify validateAndParseFilters for invalid format throws exception 1`] = `
Array [
  "Invalid parameter: account.id",
  "Invalid parameter: timestamp",
  "Invalid parameter: limit",
  "Invalid parameter: sequencenumber",
  "Invalid parameter: account.publickey",
  "Invalid parameter: account.balance",
]
`;

exports[`utils validateAndParseFilters tests Verify validateAndParseFilters for sequencenumber=2 1`] = `
Array [
  "Invalid parameter: sequencenumber",
  "Invalid parameter: sequencenumber",
]
`;
